# Audit-37-Website

./: .env.example  Dockerfile  Procfile  app.py  manage.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  scheduler.py  setup.py  tasks.py  worker.py
audit_37_website/: settings.p  wsgi.py
audits/: admin.py  forms.py  models.py  urls.py  views.py
ebaudit/: settings.py
templates/: admin_dashboard.html  base.html  dashboard.html  home.htm  home.html  layout.html  login.html  register.html  report.html
webaudit/: settings.py  urls.py  wsgi.py
webaudit/webaudit/: asgi.py
